--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13373,7 +13373,9 @@ border: 0;
 .searchAssist-kore-chat-window .show-all-results-outer-wrap .data-body-sec.iffilteristop{
     height: calc(100% - 165px);
 }
-
+.searchAssist-kore-chat-window .show-all-results-outer-wrap .data-body-sec.iffilteristop.isTopAlignFilterAdded{
+    height: calc(100% - 197px) !important;
+}
 
 .searchAssist-kore-chat-window .show-all-results-outer-wrap .customization .customization-tile {
     background: var(--sdk-white-bg);    
@@ -17497,6 +17499,7 @@ display: block;
 .data-body-sec .carousel{
     width: 100%;
     padding: 2px;
+    margin: 0px auto;
 }
 .data-body-sec .carousel .slide{
     width:230px;
