--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -946,6 +946,117 @@
                                                 border-radius: 2px;
                                                 padding: 12px 15px;
                                                 margin-top: 10px;
+                                                .conditions-response-block{
+                                                    padding: 0;
+                                                    margin: 25px 0 0 0;
+                                                    .title{
+                                                        color: #5F6368;
+                                                        font-weight: normal;
+                                                        font-size: 12px;
+                                                        line-height: 15px;
+                                                        width: auto;
+                                                    }
+                                                    .right-content{
+                                                        // max-width: 86%;
+                                                        position: relative;
+                                                        &.if-lenthfour{
+                                                            &::before{
+                                                                content: "...";
+                                                                position: absolute;
+                                                                right: -15px;
+                                                            }
+                                                        }                                        
+                                                        .added-conditions{
+                                                            display: block;
+                                                            align-items: center;
+                                                            padding-left: 10px;
+                                                            // margin-bottom: 10px;
+                                                            position: relative;                                            
+                                                            &:last-child{
+                                                                margin: 0;
+                                                            }
+                                                            .vertical-align-top{
+                                                                vertical-align: top;
+                                                            }
+                                                            .pr-10{
+                                                                padding-right: 10px;
+                                                            }
+                                                            .pr-20{
+                                                                padding-right: 20px;
+                                                            }
+                                                            .rule-title{
+                                                                color: #9AA0A6;
+                                                                font-weight: 500;
+                                                                font-size: 12px;
+                                                                line-height: 14px;
+                                                                display: inline;
+                                                            }
+                                                            .rule-dropdown-data{
+                                                                border: 1px solid #BDC1C6;
+                                                                box-sizing: border-box;
+                                                                border-radius: 4px;
+                                                                padding: 1px 6px;
+                                                                height: 16px;
+                                                                display: inline-block;
+                                                                align-items: center;
+                                                                margin: 0 12px 0 4px;
+                                                                line-height: 4px;
+                                                                // overflow: hidden;
+                                                                // text-overflow: ellipsis;
+                                                                // white-space: nowrap;
+                                                                // max-width: 140px;
+                                                                // flex-shrink: 0;
+                                                                .rule-dropdown-key{
+                                                                    color: #BDC1C6;
+                                                                    font-weight: 500;
+                                                                    font-size: 10px;
+                                                                    line-height: 12px;
+                                                                }
+                                                                .rule-dropdown-value{
+                                                                    color: #5F6368;
+                                                                    font-weight: 500;
+                                                                    font-size: 10px;
+                                                                    line-height: 12px;
+                                                                    overflow: hidden;
+                                                                    text-overflow: ellipsis;
+                                                                    white-space: nowrap;
+                                                                }
+                                                            }
+                                                            .rule-contains{
+                                                                color: #9AA0A6;
+                                                                font-weight: 500;
+                                                                font-size: 12px;
+                                                                line-height: 14px;
+                                                                display: inline-block;
+                                                                margin-bottom: 10px;
+                                                            }
+                                                            .rule-value{
+                                                                color: #5F6368;
+                                                                font-weight: 500;
+                                                                font-size: 10px;
+                                                                line-height: 12px;
+                                                                border: 1px solid #BDC1C6;
+                                                                box-sizing: border-box;
+                                                                border-radius: 4px;
+                                                                height: 16px;
+                                                                padding: 1px 6px;
+                                                                margin: 0 4px;
+                                                                // max-width: 90px;
+                                                                // flex-shrink: 0;
+                                                                display: inline-block;
+                                                                vertical-align: middle;
+                                                            }
+                                                            .or-rule{
+                                                                color: #9AA0A6;
+                                                                font-weight: 500;
+                                                                font-size: 10px;
+                                                                line-height: 12px;
+                                                                text-transform: uppercase;
+                                                                display: inline;
+                                                            }
+                                                        }
+                                                    }                                    
+                                                }
                                                 .titles-sec{
                                                     display: flex;
                                                     align-items: center;
