FLY-3793, FLY-3907, FLY-3842, FLY-3122, FLY-3702 issues fixed

--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -2326,6 +2326,8 @@ padding: 10px 20px 10px 20px;
                                     background: #F8F9FA;
                                     border-radius: 6px;
                                     padding: 15px;
+                                    display: inline-block;
+                                    width: 100%;
                                     &.carousel-preview{
                                         padding: 12px 3px;
                                     }
