--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -422,7 +422,7 @@ input::placeholder{
     top: auto;
     right: 0;
     // width: auto;
-	width: 500px;
+	width: fit-content;
 	max-width: 500px;
     bottom: 80px;
     left: 0;
