--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -29,7 +29,8 @@
                 [hidden]="tab.id===selectedTab" (click)="copyConfiguration('open',tab.id)"
                 [disabled]="tab.id==='conversationalSearch'&&searchTemplatesDisabled">{{tab.name}}</button>
             </div>
-            <div class="apply-config-text" *ngIf="copyConfigObj.loader">Applying configurations from Live Search
+            <div class="apply-config-text" *ngIf="copyConfigObj.loader">Applying configurations from
+              {{tabData&&tabData[0].name}}
               <span class="loading-spin-progress ml-2"></span>
             </div>
             <div class="apply-config-text" [ngStyle]="{'color':copyConfigObj.message!==''?'#28A745':'#202124'}"
@@ -1390,7 +1391,8 @@
                         <!-- The slideshow -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="template-2-classic-list row col-12 m-0 p-2" [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
+                            <div class="template-2-classic-list row col-12 m-0 p-2"
+                              [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                               <div class="col-3 pl-1 pr-1" *ngFor="let data of [0,1,2,3]">
                                 <div class="classic-list-item">Description comes here, descrip tion comes here,
                                   description comes here, description comes here, description comes here, description
@@ -1432,7 +1434,8 @@
                         <!-- The slideshow -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="template-3-classic-list row col-12 m-0 p-2" [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
+                            <div class="template-3-classic-list row col-12 m-0 p-2"
+                              [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                               <div class="col-3 pl-1 pr-1" *ngFor="let data of [0,1,2,3]">
                                 <div class="classic-list-item">
                                   <div class="heading-text">Heading comes here</div>
@@ -1586,7 +1589,8 @@
                         <!-- The slideshow -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="template-6-classic-list row col-12 m-0 p-2" [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
+                            <div class="template-6-classic-list row col-12 m-0 p-2"
+                              [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                               <div class="col-4 pl-1 pr-1" *ngFor="let data of [0,1,2]">
                                 <div class="classic-list-item">
                                   <div class="title-main">Heading comes here</div>
@@ -1652,7 +1656,8 @@
                         <!-- The slideshow -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="template_7_grid_list row col-12 m-0 p-2" [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
+                            <div class="template_7_grid_list row col-12 m-0 p-2"
+                              [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                               <div class="grid-data-item col-3" *ngFor="let data of [0,1,2,3]">
                                 <div class="inner-content-list">
                                   <div class="main-img-block">
@@ -1704,7 +1709,8 @@
                         <!-- The slideshow -->
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="template-8-grid-list row col-12 m-0 p-2" [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
+                            <div class="template-8-grid-list row col-12 m-0 p-2"
+                              [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                               <div class="grid-data-item col-3" *ngFor="let data of [0,1,2,3]">
                                 <div class="inner-content-list">
                                   <div class="main-img-block">
@@ -1875,6 +1881,7 @@
                   </div>
                 </div>
               </div>
+
               <!-- Image  Fields -->
               <div class="search_block"
                 *ngIf="['l4','l5','l6','l7','l8','l9'].includes(templateDataBind.layout.layoutType)">
