updated styles bugs

--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -223,7 +223,7 @@
             color: #202124;
             cursor: default;
             img {
-                cursor: pointer;
+                // cursor: pointer;
             }
             .img-sec {
                 margin-right: 25px;
