--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -41,10 +41,8 @@
         </div>
       </div>
       <!-- <button class="kr-sg-button-primary btn_lg">Preview</button> -->
+      <button class="kr-sg-button-primary btn_lg" (click)="$event.stopPropagation();updateSettings()">Save</button>
     </div>
-    <button class="kr-sg-button-primary btn_lg" (click)="$event.stopPropagation();updateSettings()">
-      <span class="">Save</span>
-    </button>
   </div>
   <div class="body_content">
     <div class="search-interface-left-sec">
