--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -41,7 +41,7 @@
         .right-side-copy-configs{
             display: flex;
             align-items: center;
-            padding-left: 54%;
+            justify-content: flex-end;
             .copy-config-dropdown{
                 margin-right: 20px;
                 &.show {
@@ -441,7 +441,7 @@
                             font-weight: normal;
                             font-size: 14px;
                             line-height: 20px;
-                            color: #202124;
+                            // color: #202124;
                             top: -1px;
                         }
                     }
