--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3097,7 +3097,7 @@ nouislider{
     .arrow{
         margin-left: 2px;
         &::before{
-            border-bottom-color: #202124;
+            // border-bottom-color: #202124;
         }
     }
     .tooltip-inner{
