--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1449,6 +1449,27 @@ div.divBlockEmptylastChild:first-child {
         }
     }
 }
+.delete-popup-weights{
+    app-confirmation-dialog{
+        .new-delete-popup{
+            .header-sec{
+                .title{
+                    font-weight: normal !important;
+                    font-size: 14px !important;
+                    line-height: 24px !important;
+                    color: #605E5C !important;                    
+                }
+            }
+            .body-info{
+                margin: 25px 0 30px 0 !important;
+                font-weight: normal !important;
+                font-size: 14px !important;
+                line-height: 24px !important;
+                color: #605E5C !important;
+            }
+        }
+    }
+}
 .cursor-pointer{
     cursor: pointer !important;
 }
