--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -699,6 +699,7 @@
                             // position: absolute;
                             // right: 10px;
                             // top: 0;
+                            padding-left: 10px;
                         }
                         .actions-images{
                             display: none;
